feat: disable cache

--- a/squid.conf
+++ b/squid.conf
@@ -3186,7 +3186,7 @@ http_port 80
 #	local memory as they need. For more details about the shared memory
 #	cache, see memory_cache_shared.
 #Default:
-# cache_mem 256 MB
+cache_mem 0
 
 #  TAG: maximum_object_size_in_memory	(bytes)
 #	Objects greater than this size will not be attempted to kept in
