--- a/squid.conf
+++ b/squid.conf
@@ -7977,4 +7977,4 @@ refresh_pattern .		0	20%	4320
 #	not all I/O types supports large values (eg on Windows).
 #Default:
 # Use operating system limits set by ulimit.
-
+max_filedesc 4096
